clusters/my-cluster/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: k3s.facu.tk
      http:
        paths:
          - backend:
              serviceName: podinfo
              servicePort: 9898
