clusters/my-cluster/simple-rest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facutk-hello-html-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facutk-hello-html
  template:
    metadata:
      labels:
        app: facutk-hello-html
    spec:
      containers:
        - name: facutk-hello-html
          image: facutk/hello-html:1.0.0-rc.4 # {"$imagepolicy": "flux-system:facutk-hello-html-policy"}
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: facutk-hello-html-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      name: tcp
  selector:
    app: facutk-hello-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-rest-golang-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-rest-golang
  template:
    metadata:
      labels:
        app: simple-rest-golang
    spec:
      containers:
        - name: simple-rest-golang
          image: fransafu/simple-rest-golang:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: simple-rest-golang-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: tcp
  selector:
    app: simple-rest-golang
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-rest-golang-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /notes
            pathType: Prefix
            backend:
              service:
                name: simple-rest-golang-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facutk-hello-html-service
                port:
                  number: 80
